# LEGS

./: .gitignore  .gitmodules  README.md
l3gs/: .gitignore  bag_to_colmap.py  color_normalization.py  dummy_cache2.info  dummy_cache2.npy  generate_pseudo_labels.py  grads.txt  launch_instructions.txt  ns-train.lprof  pyproject copy.toml  pyproject.toml  sample_training_images_for_gpt.py
l3gs/2024-01-30_003819/: config.yml
l3gs/gpt_outputs/full_kitchen_blur_pose_bag_colmap/: outputs.csv
l3gs/l3gs/: L3GS_config.py  L3GS_pipeline.py  L3GS_trainer.py  L3GS_utils.py  query_diff_utils.py
l3gs/l3gs/cameras/: camera_optimizers.py
l3gs/l3gs/data/: L3GS_datamanager.py  L3GS_dataparser.py  L3GS_dataset.py  scene_box.py
l3gs/l3gs/data/utils/: dino_dataloader.py  dino_dataloader2.py  dino_extractor.py  patch_embedding_dataloader.py  patch_embedding_dataloader2.py  pyramid_embedding_dataloader.py  pyramid_embedding_dataloader2.py  sequential_patch_embedding_dataloader.py
l3gs/l3gs/encoders/: openclip_encoder.py
l3gs/l3gs/fields/: gaussian_lerf_field.py
l3gs/l3gs/model/: ll_gaussian_splatting.py  ll_gaussian_splatting_old.py  new_gaussian_splatting.py
l3gs/l3gs/monodepth/: midas_network.py  zoedepth_network.py
l3gs/l3gs/scripts/: VLAD_test.ipynb  clip_query.ipynb  differencing.ipynb  sift_test.ipynb
lifelong_msgs/: CMakeLists.txt
