[project]
name = "l3gs"
version = "0.1.1"
requires-python = ">=3.8"

dependencies=[
    "nerfstudio == 1.1.1",
    "gsplat@git+https://github.com/nerfstudio-project/gsplat@3a184580a0509da80d8d7a56178ab5c6bb736575",
    "Pillow >=9.3.0, <=10.3.0",
    "urllib3==1.26.15",
    "open-clip-torch==2.23.0",
    "numpy==1.26.2",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["l3gs*"]

[project.entry-points.'nerfstudio.method_configs']
l3gs = 'l3gs.L3GS_config:l3gs_method'